--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,4 +19,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
-  
+  },
+  "include": ["src"]
+}
